--- a/docs/devices/AM43-0.45_40-ES-EB.md
+++ b/docs/devices/AM43-0.45_40-ES-EB.md
@@ -23,7 +23,7 @@ pageClass: device-page
 
 
 <!-- Notes BEGIN: You can edit here. Add "## Notes" headline if not already present. -->
-
+Zigbee Model is AM43-0.45/40-ES-EZ. AM43-0.45/40-ES-EB is Bluetooth
 
 <!-- Notes END: Do not edit below this line -->
 
